Fix avatar centering: make .image.avatar block with text-align center for all viewports

--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -226,6 +226,12 @@ papertitle {
       .avatar-wrapper {
         position: relative;
         display: inline-block;
+        margin: 0 auto;
+      }
+
+      .image.avatar {
+        display: block;
+        text-align: center;
       }
 
       .avatar-wrapper .avatar-default {
